Wed Apr 20 18:12:30 CET 2016
	Fixed macros in sysfdsetsize.c which could prevent compiling with
	non-default FD_SETSIZE.
	Fixed comments in mhd_str.c.
	Updated test_post.c to not ignore specific error on W32 if libcurl
	is built with workaround for WinSock bug. -EG

Mon Apr 18 19:35:14 CET 2016
	Fixed data races leading to inability in rare situations to
	resume suspended connection. -EG

Tue Apr 13 21:46:01 CET 2016
	Removed unneeded locking for global timeout list in
	MHD_USE_THREAD_PER_CONNECTION mode.
	Added 'simplepost' and 'largepost' examples to VS projects.
	Added strtoXX() locale-independent replacement functions.
	Added more error checking and minor fixes in digest auth
	functions - should improve security.
	Ignored specific errors in 'test_post' test until libcurl
	will implement workaround for WinSock bug.
	Fixed handling of caller-supplied socket with
	MHD_OPTION_LISTEN_SOCKET (regression in 0.9.49).
	Minor fixes.
	Various cosmetics and comments fixes. -EG

Sat Apr 09 13:05:42 CET 2016
	Releasing libmicrohttpd 0.9.49. -EG

Fri Apr 08 18:32:17 CET 2016
	Some minor internal fixes, addition error checking and
	micro optimizations.
	Reworked usage of sockets shutdown() - now work equally
	on all platforms, disconnection should be "more graceful". -EG

Tue Mar 15 21:52:27 CET 2016
	Do not crash if pthread_create() fails. -DD

Tue Mar 15 20:29:34 CET 2016
	Do not use eready DLL data structure unless
	we are actually using epoll(). -DD/CG

Fri Feb  5 20:43:11 CET 2016
	Fixed testsuite compile warning on W32.
	Added check test for triggering poll() on
	listen socket. -EG

Thu Feb  4 11:38:11 CET 2016
	Added some buffer overrun protection.
	Fixed handling of misformed URI with spaces. -EG

Wed Feb  3 15:41:57 CET 2016
	Make signal-pipe non-blocking and drain it. -CG

Sat Jan 30 15:49:07 CET 2016
	Fix running select() with empty fdsets on W32. -EG

Mon Jan 25 13:45:50 CET 2016
	Added check test for triggering select() on
	listen socket. -EG
